--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
     <title>My photo</title>
   </head>
   <body> 
-<img src="img.src"width="400px"height="400px">  </body>
+<img src="img.jpg"width="400px"height="400px">  </body>
 </html>
