--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
     <title>My photo</title>
   </head>
   <body> 
-<img src="img.jpg"width="400px"height="400px">  </body>
+<img src="https://github.com/user-attachments/assets/8ad1211a-5956-4a07-a704-a62ed4b8ae37"width="400px"height="400px">  </body>
 </html>
